Used new extension model from c#.

--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/GameBoards/GameSpaceWithoutBorders.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/GameBoards/GameSpaceWithoutBorders.razor
@@ -4,11 +4,11 @@
     <svg x="@SpaceLocation.X" y="@SpaceLocation.Y" @onclick="ProcessClickAsync" width="@SpaceSize.Width" height="@SpaceSize.Height" viewBox="@ViewBox()">
         @if (ShapeCategory == EnumShapeCategory.Rectangle)
         {
-            <rect width="100%" height="100%" fill="@FillColor.ToWebColor()" />
+            <rect width="100%" height="100%" fill="@FillColor.ToWebColor" />
         }
         else
         {
-            <ellipse cx="@RadiusX" cy="@RadiusY" rx="@RadiusX" ry="@RadiusY" fill="@FillColor.ToWebColor()" />
+            <ellipse cx="@RadiusX" cy="@RadiusY" rx="@RadiusX" ry="@RadiusY" fill="@FillColor.ToWebColor" />
         }
         @if (ChildContent != null)
         {
@@ -22,11 +22,11 @@
      width="@SpaceSize.Width" height="@SpaceSize.Height" viewBox="@ViewBox()">
     @if (ShapeCategory == EnumShapeCategory.Rectangle)
     {
-        <rect width="100%" height="100%" fill="@FillColor.ToWebColor()" />
+        <rect width="100%" height="100%" fill="@FillColor.ToWebColor" />
     }
     else
     {
-        <ellipse cx="@RadiusX" cy="@RadiusY" rx="@RadiusX" ry="@RadiusY" fill="@FillColor.ToWebColor()" />
+        <ellipse cx="@RadiusX" cy="@RadiusY" rx="@RadiusX" ry="@RadiusY" fill="@FillColor.ToWebColor" />
     }
     @if (ChildContent != null)
     {
