--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/GameBoards/BorderedSpace.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/GameBoards/BorderedSpace.razor
@@ -10,7 +10,7 @@
         return;
     }
     <svg @onclick="ProcessClickAsync">
-        <rect width="100%" height="100%" fill="@FillColor.ToWebColor()" style="@ShapeStyle()" />
+        <rect width="100%" height="100%" fill="@FillColor.ToWebColor" style="@ShapeStyle()" />
         @ChildContent
     </svg>
     return;
@@ -20,11 +20,11 @@
     <svg x="@SpaceLocation.X" y="@SpaceLocation.Y" @onclick="ProcessClickAsync" width="@SpaceSize.Width" height="@SpaceSize.Height" viewBox="@ViewBox()">
         @if (ShapeCategory == EnumShapeCategory.Rectangle)
         {
-            <rect width="100%" height="100%" fill="@FillColor.ToWebColor()" style="@ShapeStyle()" />
+            <rect width="100%" height="100%" fill="@FillColor.ToWebColor" style="@ShapeStyle()" />
         }
         else
         {
-            <ellipse cx="@RadiusX" cy="@RadiusY" rx="@RadiusX" ry="@RadiusY" fill="@FillColor.ToWebColor()" style="@ShapeStyle()" />
+            <ellipse cx="@RadiusX" cy="@RadiusY" rx="@RadiusX" ry="@RadiusY" fill="@FillColor.ToWebColor" style="@ShapeStyle()" />
         }
         @ChildContent
     </svg>
@@ -33,11 +33,11 @@
 <svg x="@SpaceLocation.X" y="@SpaceLocation.Y" style="pointer-events: none" width="@SpaceSize.Width" height="@SpaceSize.Height" viewBox="@ViewBox()">
     @if (ShapeCategory == EnumShapeCategory.Rectangle)
     {
-        <rect width="100%" height="100%" fill="@FillColor.ToWebColor()" style="@ShapeStyle()" />
+        <rect width="100%" height="100%" fill="@FillColor.ToWebColor" style="@ShapeStyle()" />
     }
     else
     {
-        <ellipse cx="@RadiusX" cy="@RadiusY" rx="@RadiusX" ry="@RadiusY" fill="@FillColor.ToWebColor()" style="@ShapeStyle()" />
+        <ellipse cx="@RadiusX" cy="@RadiusY" rx="@RadiusX" ry="@RadiusY" fill="@FillColor.ToWebColor" style="@ShapeStyle()" />
     }
     @ChildContent
 </svg>
