--- a/Standard/BasicGameFrameworkLibrary/Blazor/GameGraphics/Base/BorderedCommandSpace.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/GameGraphics/Base/BorderedCommandSpace.razor
@@ -5,6 +5,6 @@
     return;
 }
 <svg @onclick="Submit">
-    <rect width="100%" height="100%" fill="@FillColor.ToWebColor()" style="@ShapeStyle()" />
+    <rect width="100%" height="100%" fill="@FillColor.ToWebColor" style="@ShapeStyle()" />
     @ChildContent
 </svg>
